--- a/index.html
+++ b/index.html
@@ -3,17 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <img src="imagens/capa.png" alt="fotocapa">
-    <ul>
-        <li>Home</li>
-        <li>Biografia</li>
-        <li>Campanha</li>
-        <li>Contato</li>
-    </ul>
-    <img src="imagens/foto1.png" alt="foto1">
+    <div class="container">
+        <img src="img/avatar.png">
+    </div>
+
+
+<footer>
+    <ion-icon name="logo-youtube"></ion-icon>
+    <ion-icon name="logo-facebook"></ion-icon>
+    <ion-icon name="logo-twitter"></ion-icon>
+    <ion-icon name="logo-linkedin"></ion-icon>
+</footer>
+    <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 </body>
 </html>
